old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: little-ecom-ingress
spec:
  rules:
    - host: little-ecom.com               # Local linux hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
